Updated admin app

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Backend API Configuration
-NEXT_PUBLIC_API_URL=https://agency-backend-pi.vercel.app/api/v1
+NEXT_PUBLIC_API_URL=http://localhost:4500/api/v1
 
 # Environment
 NODE_ENV=development
+
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyDnZyWDH9hqHvzw6ewgPmBqXzNpH1loSQA
